force-app/main/default/objects/Product2/fields/ADA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>ADA_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADA Compliant</label>
    <type>Checkbox</type>
</CustomField>