force-app/main/default/objects/Product2/fields/Alternative_product__c.field-meta.xml
<CustomField>
    <fullName>Alternative_product__c</fullName>
    <label>Alternative product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>