force-app/main/default/objects/Product2/fields/B2B_Product_PID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_PID__c</fullName>
    <externalId>true</externalId>
    <label>B2B Product PID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>