force-app/main/default/objects/Product2/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <description>Cost price from SQL</description>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>