force-app/main/default/objects/Product2/fields/Delivery_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Eligible</label>
    <type>Checkbox</type>
</CustomField>