force-app/main/default/objects/Product2/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <label>Distribution Center</label>
    <length>8</length>
    <type>Text</type>
</CustomField>