force-app/main/default/objects/Product2/fields/Energy_Star_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Energy_Star_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy Star Compliant</label>
    <type>Checkbox</type>
</CustomField>