force-app/main/default/objects/Product2/fields/Feature_Description__c.field-meta.xml
<CustomField>
    <fullName>Feature_Description__c</fullName>
    <label>Feature Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>