force-app/main/default/objects/Product2/fields/Fulfillment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Channel__c</fullName>
    <label>Fulfillment Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>