force-app/main/default/objects/Product2/fields/Haulaway_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Haulaway_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Haulaway Eligible</label>
    <type>Checkbox</type>
</CustomField>