force-app/main/default/objects/Product2/fields/Item_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Item_Add_Date__c</fullName>
    <label>Item Add Date</label>
    <type>DateTime</type>
</CustomField>