force-app/main/default/objects/Product2/fields/Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Item Id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>