force-app/main/default/objects/Product2/fields/Mailable__c.field-meta.xml
<CustomField>
    <fullName>Mailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailable</label>
    <type>Checkbox</type>
</CustomField>