force-app/main/default/objects/Product2/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <label>Manufacturer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>