force-app/main/default/objects/Product2/fields/Manufacturer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part_Number__c</fullName>
    <label>Manufacturer Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>