force-app/main/default/objects/Product2/fields/MDM_Fulfillment_Class__c.field-meta.xml
<CustomField>
    <fullName>MDM_Fulfillment_Class__c</fullName>
    <label>MDM Fulfillment Class</label>
    <length>3</length>
    <type>Text</type>
</CustomField>