force-app/main/default/objects/Product2/fields/MFG_Name__c.field-meta.xml
<CustomField>
    <fullName>MFG_Name__c</fullName>
    <label>MFG Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>