force-app/main/default/objects/Product2/fields/MFG_Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>MFG_Stock_Number__c</fullName>
    <label>MFG Stock Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>