force-app/main/default/objects/Product2/fields/Parent_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Part_Number__c</fullName>
    <label>Parent Part Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>