force-app/main/default/objects/Product2/fields/Product_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Product_Subcategory__c</fullName>
    <label>Product Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>