force-app/main/default/objects/Product2/fields/Product_Width__c.field-meta.xml
<CustomField>
    <fullName>Product_Width__c</fullName>
    <label>Product Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>