force-app/main/default/objects/Product2/fields/Production_Memo__c.field-meta.xml
<CustomField>
    <fullName>Production_Memo__c</fullName>
    <label>Production Memo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>