force-app/main/default/objects/Product2/fields/Sears_Commercial_Price__c.field-meta.xml
<CustomField>
    <fullName>Sears_Commercial_Price__c</fullName>
    <label>Sears Commercial Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>