force-app/main/default/objects/Product2/fields/Short_Desc__c.field-meta.xml
<CustomField>
    <fullName>Short_Desc__c</fullName>
    <label>Short Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>