force-app/main/default/objects/Product2/fields/Store_Pickup_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Store_Pickup_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Pickup Eligible</label>
    <type>Checkbox</type>
</CustomField>