force-app/main/default/objects/Product2/fields/Sub_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Line_Number__c</fullName>
    <label>Sub Line Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>