force-app/main/default/objects/Product2/fields/Substitution_Down__c.field-meta.xml
<CustomField>
    <fullName>Substitution_Down__c</fullName>
    <label>Substitution Down</label>
    <length>20</length>
    <type>Text</type>
</CustomField>