force-app/main/default/objects/Product2/fields/Substitution_Up__c.field-meta.xml
<CustomField>
    <fullName>Substitution_Up__c</fullName>
    <label>Substitution Up</label>
    <length>20</length>
    <type>Text</type>
</CustomField>