force-app/main/default/objects/Product2/fields/Transition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transition_Reason__c</fullName>
    <label>Transition Reason</label>
    <type>TextArea</type>
</CustomField>