force-app/main/default/objects/Product2/fields/Truck_Load_Qty__c.field-meta.xml
<CustomField>
    <fullName>Truck_Load_Qty__c</fullName>
    <label>Truck Load Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>