force-app/main/default/objects/Product2/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <label>UPC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>