force-app/main/default/objects/Product2/fields/Vendor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SKU__c</fullName>
    <label>Vendor SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>