force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Manufacturer_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Alternative_product__c</columns>
    <columns>Discontinued__c</columns>
    <columns>Replacement_Product__c</columns>
    <columns>Substitution_Down__c</columns>
    <columns>Substitution_Up__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>