force-app/main/default/objects/Product2/listViews/Products_Pricing.listView-meta.xml
<ListView>
    <fullName>Products_Pricing</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Manufacturer_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Products Pricing</label>
</ListView>